fixed overflow issues on small devices

--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -70,7 +70,6 @@
   @include small-size {
     width: 40px;
     height: 40px;
-    right: 45px;
   }
 
   &.active {
