--- a/src/scss/sections/aboutSection.scss
+++ b/src/scss/sections/aboutSection.scss
@@ -1,5 +1,6 @@
 .about {
   margin-top: 40px;
+  overflow: hidden;
   @include medium-size-mobile {
     margin-top: 120px;
   }
