--- a/src/scss/sections/connectSection.scss
+++ b/src/scss/sections/connectSection.scss
@@ -1,5 +1,6 @@
 .connect {
   margin-top: 40px;
+  overflow: hidden;
 
   @include medium-size-mobile {
     margin-top: 140px;
